syntax = "proto3";

package time;

service TimeService {
  rpc GetTime (TimeRequest) returns (TimeResponse) {}
}

message TimeRequest {
  int64 clientTimestamp = 1;
  bytes data = 2;
}

message TimeResponse {
  int64 serverTimestamp = 1;
}

